# ec2_deploy_dashboard

./: .terraform.lock.hcl  Dockerfile  README.md  ec2.tf  mian.tf  pyproject.toml
